Refine benefits content styling, fix broken HTML tags, and update premium typography across benefits and blog sections

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -8,6 +8,7 @@
         "contact": "اتصال",
         "shop": "المتجر",
         "benefits": "الفوائد",
+        "allBenefits": "جميع الفوائد",
         "certifications": "الشهادات",
         "sustainability": "الاستدامة",
         "quality": "الجودة"
