--- a/src/locales/ar/home.json
+++ b/src/locales/ar/home.json
@@ -80,50 +80,59 @@
         }
     },
     "categories": {
-        "title": "المنتجات الأكثر مبيعًا",
+        "badge": "جملة",
+        "title": "العلامة التجارية لمنتجاتنا",
         "subtitle": "مباشرة من المصدر في المغرب",
         "items": [
             {
                 "title": "زيت الارجان المغربي الاصلي",
-                "label": "جملة"
+                "subtitle": "جملة"
             },
             {
                 "title": "زيت التين الشوكي الاصلي",
-                "label": "جملة"
+                "subtitle": "جملة"
             },
             {
                 "title": "الصابون البلدي المغربي",
-                "label": "جملة"
+                "subtitle": "جملة"
             },
             {
                 "title": "ماء الورد المغربي طبيعي",
-                "label": "جملة"
+                "subtitle": "جملة"
             },
             {
                 "title": "الطين المغربي غاسول",
-                "label": "جملة"
+                "subtitle": "جملة"
             }
         ]
     },
     "productsSection": {
-        "title": "مجموعات عضوية مختارة",
-        "subtitle": "اكتشف أساسيات الجمال المغربية الأكثر شعبية لدينا",
+        "badge": "مجموعة منتجاتنا",
+        "title": "المنتجات",
+        "highlight": "الأكثر مبيعًا",
+        "description": "اكتشف تشكيلتنا المختارة من المكونات العضوية المعتمدة، والتي يتم الحصول عليها مباشرة من التعاونيات والمزارع الحرفية المغربية.",
+        "cta": "اطلب كتالوج المنتجات الكامل",
+        "subtitle": "مباشرة من المصدر في المغرب",
         "viewAll": "مشاهدة جميع المنتجات",
+        "ctaButton": "أضف إلى السلة",
         "items": [
             {
                 "name": "زيت الأرغان النقي",
                 "category": "زيت عضوي",
-                "description": "زيت أرغان عضوي معتمد نقي 100٪ من قلب المغرب."
+                "description": "زيت أرغان عضوي معتمد نقي 100٪ من قلب المغرب.",
+                "badgeLabel": "عضوي"
             },
             {
                 "name": "زيت التين الشوكي",
                 "category": "زيت عضوي",
-                "description": "إنتاج عالي الجودة لزيت بذور صبار التين الشوكي."
+                "description": "إنتاج عالي الجودة لزيت بذور صبار التين الشوكي.",
+                "badgeLabel": "عضوي"
             },
             {
                 "name": "الصابون المغربي الأسود",
                 "category": "حمام",
-                "description": "صابون أسود تقليدي بزيت الزيتون وفيتامين هـ."
+                "description": "صابون أسود تقليدي بزيت الزيتون وفيتامين هـ.",
+                "badgeLabel": "حمام"
             }
         ]
     },
@@ -179,6 +188,15 @@
             "destination": "الوجهة",
             "message": "رسالتك",
             "submit": "إرسال"
+        },
+        "successTitle": "تم إرسال طلب العرض!",
+        "successMessage": "سنعود إليك بعرض سعر خلال 24 ساعة.",
+        "sendAnother": "إرسال طلب آخر",
+        "readyDispatch": "جاهز للشحن — يتم شحن طلبك خلال 48 ساعة",
+        "productTypes": {
+            "Organic Virgin": "عضوي بكر",
+            "Deodorized": "مزال الرائحة",
+            "Culinary": "للطهي"
         }
     },
     "socialProof": {
@@ -190,5 +208,81 @@
             "score": "4.9/5 تقييم",
             "source": "استناداً إلى مراجعات جوجل المعتمدة"
         }
+    },
+    "pressFeature": {
+        "date": "اليوم العالمي للأركان • 10 ماي",
+        "title": "زيت الأركان وأهمية شجرة الأركان للمغرب",
+        "subtitle": "يُحتفى به كـ \"ذهب سائل\" للبشرة والشعر والتميز في الطهي",
+        "intro1": "في 10 ماي نحتفل باليوم العالمي للأركان، وهي شجرة متعددة الاستعمالات تُنتج زيت الأركان المعروف عالمياً. يُطلق على هذا الزيت لقب “الذهب السائل” لما يتميز به من فوائد جمالية وصحية، وقد استعمله الأمازيغ في جنوب المغرب لقرون طويلة للأغراض التجميلية والغذائية. تركيبته الغنية تجعله مورداً طبيعياً استثنائياً للعناية بالبشرة والشعر والصحة وحتى في المطبخ.",
+        "intro2": "فيما يلي أبرز فوائد زيت الأركان:",
+        "benefits": [
+            {
+                "title": "العناية بالبشرة",
+                "description": "يحتوي زيت الأركان على أحماض دهنية أساسية وفيتامين هـ ومضادات أكسدة، ما يجعله مرطباً مثالياً للبشرة الحساسة والجافة. خصائصه المضادة للالتهاب وتركيزه العالي من حمض اللينوليك يساعدان على تقوية الحاجز الطبيعي للبشرة، ومنع فقدان الرطوبة، وتنعيم الملمس. كما يحدّ من التجاعيد والخطوط الرفيعة، ويوازن إفرازات الزهم، ويساعد في تهدئة حب الشباب والأكزيما والصدفية."
+            },
+            {
+                "title": "العناية بالشعر",
+                "description": "بفضل غناه بفيتامين هـ ومضادات الأكسدة، يغذي زيت الأركان الشعر ويصلحه، ويحسن قوته ونعومته ولمعانه، خصوصاً للشعر الجاف أو المتقصف. بضع قطرات على الأطراف تخفف التقصف وتروّض التجعد وتعيد الرطوبة، كما أن الاستخدام المنتظم يدعم صحة فروة الرأس ويحفّز نمو الشعر."
+            },
+            {
+                "title": "مكافحة علامات التقدم في السن",
+                "description": "محتواه المرتفع من فيتامين هـ يحارب الجذور الحرة المسببة لتلف الخلايا، فيحافظ على شباب البشرة ويقلل ظهور التجاعيد والخطوط الدقيقة، ويساعد على الإبقاء على مرونة البشرة لفترة أطول."
+            },
+            {
+                "title": "فوائد صحية",
+                "description": "يُستخدم زيت الأركان أيضاً في المطبخ المغربي، إذ إن غناه بالدهون الأحادية غير المشبعة والبوليفينولات يجعله زيتاً صحياً للقلب. يساهم في تحسين مستوى الكوليسترول، وتعزيز صحة القلب والأوعية، وتقوية المناعة العامة. كما أن خواصه المضادة للالتهاب قد تقلل مخاطر الأمراض المزمنة مثل السكري وأمراض القلب."
+            },
+            {
+                "title": "العناية بالأظافر والجلد المحيط",
+                "description": "يغذي زيت الأركان الأظافر والجلد حولها، ويمنع التشقق أو التقشر، ما يحافظ على قوة الأظافر ومظهرها الصحي."
+            }
+        ],
+        "importanceTitle": "أهمية شجرة الأركان للمغرب",
+        "importanceIntro": "تُعد شجرة الأركان جزءاً أصيلاً من التراث الطبيعي والثقافي المغربي، فهي مصدر رزق للعديد من الأسر وتلعب دوراً محورياً في البيئة والاقتصاد المحلي.",
+        "importancePoints": [
+            {
+                "title": "الأهمية الاقتصادية",
+                "description": "يُعد زيت الأركان من أهم صادرات المغرب، ومع تزايد الطلب العالمي ظهرت فرص دخل جديدة للمجتمعات القروية جنوب البلاد. لعبت التعاونيات النسائية دوراً أساسياً منذ التسعينيات في تمكين النساء اقتصادياً ومنحهن الاستقلال المالي وتحسين الولوج إلى التعليم والرعاية الصحية."
+            },
+            {
+                "title": "الأهمية البيئية",
+                "description": "تتكيف أشجار الأركان مع الظروف شبه الجافة، وجذورها العميقة تمنع انجراف التربة والتصحر. تغطي غابات الأركان نحو 800 ألف هكتار، وتشكل حاجزاً أمام زحف الصحراء وتحافظ على التنوع البيولوجي، كما توفر الغذاء والمأوى للحيوانات، بما في ذلك الماعز التي تتسلق الأشجار."
+            },
+            {
+                "title": "الأهمية الثقافية والتراثية",
+                "description": "شجرة الأركان متجذّرة في الثقافة الأمازيغية، ويُعتبر استخراج الزيت بالطريقة التقليدية جزءاً من الهوية المحلية، حيث تتناقل النساء طرق الطحن اليدوي عبر الأجيال وتُعد العملية نشاطاً اجتماعياً يعزز الروابط داخل المجتمع."
+            },
+            {
+                "title": "الاستدامة والمحافظة",
+                "description": "مع ارتفاع الطلب العالمي طُرحت تساؤلات حول الاستدامة، لكن تم اتخاذ مبادرات لحماية الغابات واعتماد ممارسات حصاد مسؤولة. اعترفت اليونسكو بغابات الأركان كمحمية للمحيط الحيوي سنة 1998، ما شجع على الزراعة العضوية والحفاظ على هذا المورد الثمين للأجيال المقبلة."
+            },
+            {
+                "title": "الاعتراف الدولي والحفظ",
+                "description": "يسلط اليوم العالمي للأركان الضوء على القيمة الاقتصادية والاجتماعية والبيئية للشجرة، ويذكّر بضرورة حمايتها. فزيت الأركان ليس مجرد منتج تجميلي أو غذائي، بل شهادة على عبقرية الشعب الأمازيغي وصمود هذه الشجرة، وتأثيرها يتجاوز المغرب ليصل إلى صناعات الجمال والصحة في العالم."
+            }
+        ],
+        "cta": "اقرأ المقال كاملاً على UN Today"
+    },
+    "privateLabel": {
+        "badge": "خدماتنا",
+        "discoverTitle": "اكتشف خدمة",
+        "discoverHighlight": "البطاقات التعريفية الخاصة",
+        "discoverSuffix": "بنا",
+        "discoverText1": "تقدم شركتنا منتجات وخدمات تجميل عضوية مغربية مختلفة للعناية بالجسم، بما في ذلك العلامات التجارية المهنية الخاصة، لعملائها في جميع أنحاء العالم. نتعامل مع دول في جميع أنحاء العالم، في الولايات المتحدة الأمريكية والمملكة المتحدة وكندا وماليزيا واليابان وكوريا والصين وأستراليا وقطر والمملكة العربية السعودية وجنوب إفريقيا",
+        "discoverText2": "",
+        "discoverText3": "",
+        "brandTitle": "ضف علامتك التجارية الخاصة إلى",
+        "brandHighlight": "منتجك",
+        "brandText1": "مجموعة اورجانيكا لديها القدرة على التوسع مع عملائنا. تغليف فريد يمكن تخصيصه لعلامتك التجارية. لقد دخلنا في شراكة مع العديد من المصانع في العالم من أجل التصميم والتصنيع والتعبئة والتغليف لجميع أنواع المنتجات. تمت الموافقة على جميع المصانع للأسواق الأمريكية والأوروبية. كما يسعدنا أن نقدم لعملائنا مجموعة واسعة من خيارات التعبئة القياسية التي تم تصميمها لتقديم أحدث خيارات التعبئة والتغليف.",
+        "brandText2": "",
+        "brandText3": "",
+        "countriesServed": "دول يتم خدمتها",
+        "globalExport": "جاهزون للتصدير العالمي"
+    },
+    "instagram": {
+        "handle": "@moroccanorganic",
+        "title": "تابع رحلتنا",
+        "description": "خلف كواليس التوريد المستدام، من الحقل إلى الشحن",
+        "cta": "تابعنا على إنستغرام"
     }
 }
