--- a/src/locales/ar/private-label.json
+++ b/src/locales/ar/private-label.json
@@ -24,23 +24,23 @@
   },
   "expertise": {
     "label": "خبرتنا",
-    "title": "لماذا تختار علامتنا الخاصة؟",
+    "title": "لماذا تختار منتجات التجميل العضوية المغربية؟",
     "features": [
       {
-        "title": "جودة مضمونة",
-        "description": "رقابة صارمة على الجودة لزيت الأركان ومسحوق السدر وزيت الورد. يخضع كل منتج للاختبار لضمان الفعالية والسلامة."
+        "title": "جودة وطبيعة مضمونة",
+        "description": "أعد منتجاتنا من مكونات طبيعية يشتهر بها المغرب، مثل زيت الأركان، ومسحوق السدر، وزيت الورد. يخضع كل منتج لرقابة صارمة على الجودة لضمان فعاليته وسلامته."
       },
       {
-        "title": "تجديد البشرة",
-        "description": "تركيبات غنية بالفيتامينات ومضادات الأكسدة لإشراق يدوم. يفتح البشرة بشكل طبيعي ويقلل التجاعيد."
+        "title": "تفتيح وتجديد البشرة",
+        "description": "تعمل منتجات التجميل العضوية المغربية على تفتيح البشرة بشكل طبيعي، وإزالة البقع الداكنة، وتقليل التجاعيد. بفضل تركيباتها الغنية بالفيتامينات ومضادات الأكسدة، تمنح البشرة إشراقة وحيوية دائمة."
       },
       {
-        "title": "تغذية الشعر",
-        "description": "يقوي ويرطب باستخدام المكونات التقليدية مثل زيت الأركان. يحفز النمو ويعطي لمعاناً طبيعياً."
+        "title": "تغذية وترطيب الشعر",
+        "description": "تحتوي منتجاتنا على مكونات طبيعية مثل زيت الأركان، الذي يساعد على تقوية الشعر، وتحفيز نموه، ومنحه لمعاناً طبيعياً. تساهم هذه المنتجات أيضاً في ترطيب الشعر ومعالجة مشاكل مثل القشرة وتساقط الشعر."
       },
       {
-        "title": "حماية بيئية",
-        "description": "غني بالأحماض الدهنية وفيتامين E لحماية البشرة والشعر من التلوث وأشعة الشمس الضارة."
+        "title": "الحماية من الأضرار البيئية",
+        "description": "تساعد مكوناتنا، الغنية بالأحماض الدهنية وفيتامين E، في حماية البشرة والشعر من التأثيرات الضارة للتلوث وأشعة الشمس الضارة."
       }
     ]
   },
@@ -60,16 +60,16 @@
     "title": "كيف تبدأ مع العلامة الخاصة",
     "steps": [
       {
-        "title": "الاختيار",
-        "description": "اختر من بين مجموعتنا الواسعة من التركيبات العضوية المعدة مسبقاً أو اطلب مزيجاً مخصصاً ليناسب سوقك."
+        "title": "اختيار المنتج",
+        "description": "حدد مجموعة المنتجات التي ترغب في إطلاقها تحت علامتك الخاصة، مثل زيوت العناية بالبشرة، والكريمات المرطبة، والشامبو، وغيرها من المنتجات العضوية."
       },
       {
-        "title": "الهوية التجارية",
-        "description": "نساعدك في تصميم شعارات وعبوات مميزة تعكس رؤية علامتك التجارية وهويتها."
+        "title": "تصميم التغليف والشعار",
+        "description": "يمكننا مساعدتك في تصميم عبوات وشعارات مميزة تعكس رؤية علامتك التجارية."
       },
       {
-        "title": "الإطلاق",
-        "description": "احصل على منتجات معتمدة بالكامل ومعبأة باحترافية وجاهزة لسوقك."
+        "title": "تخصيص المنتج",
+        "description": "يمكنك تخصيص تركيبات المنتجات وفقًا لاحتياجات السوق المحلية وعملائك المستهدفين."
       }
     ]
   },
@@ -101,11 +101,11 @@
   },
   "compliance": {
     "title": "إشعار لوائح التصدير",
-    "description": "لا تسمح الجمارك بتصدير مستحضرات التجميل غير الملصقة. يجب أن تحتوي جميع المنتجات على ملصقات قابلة للإزالة على الأقل لتجنب مشاكل الجمارك. نحن نوفر الملصقات بلغات متعددة دون تكلفة إضافية."
+    "description": "لا تسمح الجمارك بتصدير مستحضرات التجميل غير الملصقة ويضطر المشتري لعمل بعض الملصقات الصغيرة سهلة الإزالة لتجنب أي نوع من المشاكل التي قد تحدث مع الجمارك."
   },
   "cta": {
     "title": "هل أنت جاهز للبدء؟",
-    "description": "مجموعة أورجانيكا هي شريكك المرن في التصنيع. من 100 وحدة إلى الآلاف، نحن ندعم نموك في كل خطوة على الطريق.",
+    "description": "مجموعة أورجانيكا هي الشريك التصنيعي المثالي للعلامة الخاصة، مع مجموعة واسعة من فئات منتجات العناية بالبشرة العضوية، نحن مرنون للغاية، ونزودك بأعلى مستوى من المنتجات بأفضل الأسعار.",
     "buttonText": "اتصل بفريق التصدير لدينا"
   }
 }
