--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -8,6 +8,7 @@
         "contact": "Contact",
         "shop": "Shop",
         "benefits": "Benefits",
+        "allBenefits": "All Benefits",
         "certifications": "Certifications",
         "sustainability": "Sustainability",
         "quality": "Quality"
