feat: Introduce a new About Us page with animated sections, dynamic content, and internationalization support.

--- a/src/locales/ar/about.json
+++ b/src/locales/ar/about.json
@@ -74,6 +74,20 @@
     "title": "إنتاج التعاونيات",
     "description": "يتم تصنيع منتجاتنا من قبل التعاونيات في جنوب غرب المغرب، بتقنيات ومعرفة متوارثة عبر الأجيال. يتم تصدير جميع منتجات التجميل والمنتجات الغذائية الخاصة بنا مباشرة من التعاونيات إلى عملائنا في جميع أنحاء العالم."
   },
+  "cooperatives": {
+    "title": "منتجة من طرف التعاونيات",
+    "description": "يتم تصنيع منتجاتنا من قبل التعاونيات في جنوب غرب المغرب، بمهارات ومعرفة في هذا المجال. يتم تصدير جميع منتجاتنا التجميلية والغذائية مباشرة من التعاونيات إلى عملائنا في جميع أنحاء العالم.",
+    "fairTitle": "مبادئ التجارة العادلة",
+    "fairPrinciples": [
+      "الجودة: مستحضرات تجميل عضوية 100٪",
+      "الأخلاق: ممارسات التجارة العادلة",
+      "الأصالة: مضمونة من خلال علاقة شخصية مع نساء التعاونيات"
+    ],
+    "paragraphs": [
+      "مرحبًا بكم في MoroccanOrganica، مصدركم الموثوق لمنتجات الجمال العضوية المغربية الفاخرة. نحن متخصصون في تقديم منتجات العناية بالبشرة والشعر الطبيعية 100٪ من قلب المغرب، مصنوعة بعناية لضمان أعلى جودة.",
+      "بصفتنا شركة رائدة في مجال الجملة لمنتجات الجمال العضوية المغربية، نقدم مجموعة واسعة من المنتجات بما في ذلك زيت الأركان، الصابون الأسود المغربي، طين الغاسول، ومسحوق النيلا، وكلها مصدرها المنتجون المحليون في المغرب. منتجاتنا مثالية للشركات التي ترغب في إضافة جمال مغربي أصيل إلى خط منتجاتها."
+    ]
+  },
   "promise": {
     "label": "وعدنا",
     "title": "لماذا تختار المغربية أورجانيكا؟",
